--- a/MediaWeb/MediaWeb.csproj
+++ b/MediaWeb/MediaWeb.csproj
@@ -10,13 +10,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <Folder Include="Models\Muziek\" />
+    <Folder Include="Models\Admin\" />
     <Folder Include="Models\Serie\" />
-    <Folder Include="Models\Podcast\" />
+    <Folder Include="Views\Admin\" />
+    <Folder Include="Views\Serie\" />
   </ItemGroup>
 
 </Project>
